--- a/html/frame0.html
+++ b/html/frame0.html
@@ -135,7 +135,7 @@
                 <div class="aui-row aui-row-padded">
                     <div class="aui-col-5" onclick="fnInfomation();">
                         <img src="../image/Lh-img1.png" class="icon">
-                        <div class="aui-grid-label">二手信息</div>
+                        <div class="aui-grid-label">二手物品</div>
                     </div>
                     <div class="aui-col-5" onclick="fnLocalService();">
                         <img src="../image/Lh-img2.png" class="icon">
