--- a/html/information_win.html
+++ b/html/information_win.html
@@ -18,18 +18,7 @@
         <a class="aui-pull-left aui-btn" class="back" tapmode onclick="api.closeWin();">
             <span class="aui-iconfont aui-icon-left"></span>
         </a>
-        <div class="aui-title" style="left:2rem; right: 0.5rem;">
-            <div class="aui-searchbar" id="search">
-                <div class="aui-searchbar-input aui-border-radius">
-                    <i class="aui-iconfont aui-icon-search"></i>
-                    <input type="search" placeholder="请输入搜索内容" id="search-input">
-                    <div class="aui-searchbar-clear-btn">
-                        <i class="aui-iconfont aui-icon-close"></i>
-                    </div>
-                </div>
-                <div class="aui-searchbar-btn" tapmode>取消</div>
-            </div>
-        </div>
+    <div class="aui-title">二手物品交易</div>
     </header>
 </body>
 <script type="text/javascript" src="../script/api.js"></script>
