--- a/html/user/MerchantEntry_frm.html
+++ b/html/user/MerchantEntry_frm.html
@@ -158,7 +158,7 @@
         </ul>
         <p class="aui-text-center aui-margin-t-15">上传营业执照</p>
         <section class="aui-content-padded">
-            <div class="aui-row aui-row-padded">
+            <div class="aui-row aui-row-padded" id="append">
               <div class="aui-col-xs-4 image-item" id="dis">
                   <input type="hidden" >
                   <img src="" class="notes-image" id="ald">
