--- a/html/Fabu/Frame0List_frm.html
+++ b/html/Fabu/Frame0List_frm.html
@@ -5,27 +5,165 @@
     <meta name="viewport" content="maximum-scale=1.0,minimum-scale=1.0,user-scalable=0,width=device-width,initial-scale=1.0"/>
     <meta name="format-detection" content="telephone=no,email=no,date=no,aItemress=no">
     <title>AUI快速完成布局</title>
+    <link rel="stylesheet" href="../../css/ydui.css"/>
     <link rel="stylesheet" type="text/css" href="../../css/aui.css" />
+    <link rel="stylesheet" href="../../css/common.css">
+    <style media="screen">
+    .keep{
+      width: 80%;
+      margin: 0 auto;
+      background: #fe467a;
+      color: #fff;
+      height: 2rem;
+      line-height: 2.05rem;
+      margin-top: 40px;
+      margin-bottom: 150px;
+    }
+    .toast-content{
+      color: #fff !important
+    }
+    .photos img {
+        display: block;
+        width: 100%; 
+    }
+    .add-photos > div {
+        width: 100%;
+        height:5.15rem;
+        line-height: 5.15rem;
+    }
+    .add-photos > div .aui-iconfont {
+        font-size: 2rem;
+        color: #ccc;
+    }
+    .image-item {
+        position: relative;
+        height: 5.3rem;
+        overflow: hidden;
+        background-color: #f0f0f0;
+    }
+    .image-item img {
+        display: block;
+        margin: 0 auto;
+        width: auto;
+        height: 100%;
+    }
+
+    </style>
 </head>
 <body>
-<ul class="aui-list aui-list-in">
-            <li class="aui-list-item">
-                <div class="aui-list-item-inner aui-list-item-arrow">
-                    数码产品
-                </div>
-            </li>
-            <li class="aui-list-item">
-                <div class="aui-list-item-inner aui-list-item-arrow">
-                    服饰
-                </div>
-            </li>
-        </ul>
+  <ul class="aui-list aui-form-list">
+              <li class="aui-list-item">
+                  <div class="aui-list-item-inner">
+                      <div class="aui-list-item-label">
+                        标题
+                      </div>
+                      <div class="aui-list-item-input">
+                          <input type="text" placeholder="一句话进行标题描述" name="title" id="Tit">
+                      </div>
+                  </div>
+              </li>
+              <li class="aui-list-item">
+                  <div class="aui-list-item-inner">
+                      <div class="aui-list-item-label">
+                        手机号
+                      </div>
+                      <div class="aui-list-item-input">
+                          <input type="number" placeholder="" name="phone" id="phone">
+                      </div>
+                  </div>
+              </li>
+              <li class="aui-list-item">
+                  <div class="aui-list-item-inner">
+                      <div class="aui-list-item-label">
+                        物品类别
+                      </div>
+                      <div class="aui-list-item-input" id="set">
+                      </div>
+                  </div>
+              </li>
+              <li class="aui-list-item">
+                  <div class="aui-list-item-inner">
+                      <div class="aui-list-item-label">
+                        物品新旧
+                      </div>
+                      <div class="aui-list-item-input" id="set1" name='sid'>
+                        <input type="text" placeholder="请选择物品新旧" name="condition" id="wp" onclick="fnselect()" readonly>
+                      </div>
+                  </div>
+              </li>
+              <li class="aui-list-item">
+                  <div class="aui-list-item-inner">
+                      <div class="aui-list-item-label">
+                        原价
+                      </div>
+                      <div class="aui-list-item-input">
+                          <input type="number" placeholder="" name="o_price" id="o_price">
+                      </div>
+                  </div>
+              </li>
+              <li class="aui-list-item">
+                  <div class="aui-list-item-inner">
+                      <div class="aui-list-item-label">
+                        现价
+                      </div>
+                      <div class="aui-list-item-input">
+                          <input type="number" placeholder="" name="price" id="price">
+                      </div>
+                  </div>
+              </li>
+              <li class="aui-list-item">
+                  <div class="aui-list-item-inner">
+                      <div class="aui-list-item-label">
+                        运费
+                      </div>
+                      <div class="aui-list-item-input">
+                          <input type="number" placeholder="" name="postage" id="postage">
+                      </div>
+                  </div>
+              </li>
+              <li class="aui-list-item">
+                  <div class="aui-list-item-inner">
+                      <div class="aui-list-item-input">
+                          <textarea placeholder="物品描述" name="describe" id="describe"></textarea>
+                      </div>
+                  </div>
+              </li>
+          </ul>
+          <p class="aui-text-center aui-margin-t-15">上传物品照片</p>
+          <section class="aui-content-padded">
+              <div class="aui-row aui-row-padded" id="append">
+                  <div class="aui-col-xs-4 add-photos" onclick="fnUpdateImage1()">
+                      <div class="aui-border aui-text-center">
+                          <i class="aui-iconfont aui-icon-plus"></i>
+                      </div>
+                  </div>
+              </div>
+          </section>
+  <div class="aui-btn aui-btn-block keep" onclick="fnopenFb()">确定发布</div>
+  <script type="text/template" id="template">
+    <select id="select">
+        <option>请选择</option>
+        {{ for(var prop in it) { }}
+        <option value='{{= it[prop].id}}' name='cid'>{{= it[prop].name}}</option>
+        {{ } }}
+    </select>
+  </script>
+  <script type="text/template" id="template1">
+    <div class="aui-col-xs-4 image-item" id="dis">
+        <input type="hidden" >
+        <img src="{{= it.Msg}}" class="notes-image xh">
+    </div>
+  </script>
 </body>
 <script type="text/javascript" src="../../script/api.js" ></script>
+<script type="text/javascript" src="../../script/doT.min.js" ></script>
+<script src="../../script/jquery-1.9.1.min.js"></script>
+<script src="../../script/ydui.js"></script>
+<script src="../../script/Rz.js"></script>
 <script type="text/javascript">
     apiready = function(){
         api.parseTapmode();
+        fnWpfl();
     }
-
 </script>
 </html>
