--- a/html/Fabu/JzJob_frm.html
+++ b/html/Fabu/JzJob_frm.html
@@ -35,16 +35,6 @@
     </style>
 </head>
 <body>
-    <div class="aui-searchbar" id="search">
-        <div class="aui-searchbar-input aui-border-radius">
-            <i class="aui-iconfont aui-icon-search"></i>
-            <input type="search" placeholder="搜索职位" id="search-input">
-            <div class="aui-searchbar-clear-btn">
-                <i class="aui-iconfont aui-icon-close"></i>
-            </div>
-        </div>
-        <div class="aui-searchbar-btn" tapmode>取消</div>
-    </div>
     <div class="aui-content aui-margin-b-15">
      <ul class="aui-list aui-list-in">
          <li class="aui-list-item">
@@ -76,7 +66,7 @@
             </div>
           </li>
           <li class="aui-list-item aui-list-item-middle">
-            <div class="aui-list-item-inner aui-list-item-arrow">
+            <div class="aui-list-item-inner aui-list-item-arrow" onclick="fnBmap()">
             工作地点
             </div>
           </li>
@@ -99,42 +89,16 @@
     apiready = function(){
         api.parseTapmode();
     }
-    var searchBar = document.querySelector(".aui-searchbar");
-    var searchBarInput = document.querySelector(".aui-searchbar input");
-    var searchBarBtn = document.querySelector(".aui-searchbar .aui-searchbar-btn");
-    var searchBarClearBtn = document.querySelector(".aui-searchbar .aui-searchbar-clear-btn");
-    if(searchBar){
-        searchBarInput.onclick = function(){
-            searchBarBtn.style.marginRight = 0;
-        }
-        searchBarInput.oninput = function(){
-            if(this.value.length){
-                searchBarClearBtn.style.display = 'block';
-                searchBarBtn.classList.add("aui-text-info");
-                searchBarBtn.textContent = "搜索";
-            }else{
-                searchBarClearBtn.style.display = 'none';
-                searchBarBtn.classList.remove("aui-text-info");
-                searchBarBtn.textContent = "取消";
-            }
-        }
-    }
-    searchBarClearBtn.onclick = function(){
-        this.style.display = 'none';
-        searchBarInput.value = '';
-        searchBarBtn.classList.remove("aui-text-info");
-        searchBarBtn.textContent = "取消";
-    }
-    searchBarBtn.onclick = function(){
-        var keywords = searchBarInput.value;
-        if(keywords.length){
-            searchBarInput.blur();
-            document.getElementById("search-keywords").textContent = keywords;
-        }else{
-            this.style.marginRight = "-"+this.offsetWidth+"px";
-            searchBarInput.value = '';
-            searchBarInput.blur();
-        }
+    // 打开地图
+    function fnBmap() {
+      api.openWin({
+          name: 'bmap_win',
+          url: '../Map/bmap_win.html',
+          pageParam: {
+              name: 'test'
+          }
+      });
+
     }
 </script>
 </html>
