--- a/html/share_frame.html
+++ b/html/share_frame.html
@@ -24,6 +24,7 @@
                 text-align: center;
                 background: #fff;
                 bottom: 0;
+                width: 100%
             }
 
             .floatheader {
@@ -92,32 +93,6 @@
                     <div class="col" tapmode="btn-hov" onclick="fnShare('微信朋友圈')">
                         <img src="../image/share/share_to_icon_wxq.png" alt="">
                         <span>微信朋友圈</span>
-                    </div>
-                    <div class="col" tapmode="btn-hov" onclick="fnShare('QQ')">
-                        <img src="../image/share/share_to_icon_qq.png" alt="">
-                        <span>QQ</span>
-                    </div>
-                    <div class="col" tapmode="btn-hov" onclick="fnShare('短信')">
-                        <img src="../image/share/share_to_icon_sms.png" alt="">
-                        <span>短信</span>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col" tapmode="btn-hov" onclick="fnShare('新浪微博')">
-                        <img src="../image/share/share_to_icon_weibo.png" alt="">
-                        <span>新浪微博</span>
-                    </div>
-                    <div class="col" tapmode="btn-hov" onclick="fnShare('QQ空间')">
-                        <img src="../image/share/share_to_icon_qzone.png" alt="">
-                        <span>QQ空间</span>
-                    </div>
-                    <div class="col" tapmode="btn-hov" onclick="fnShare('电子邮件')">
-                        <img src="../image/share/share_to_icon_mail.png" alt="">
-                        <span>电子邮件</span>
-                    </div>
-                    <div class="col" tapmode="btn-hov" onclick="fnShare('复制')">
-                        <img src="../image/share/share_to_icon_copy.png" alt="">
-                        <span>复制</span>
                     </div>
                 </div>
             </div>
