--- a/html/Fabu/JzJob_frm.html
+++ b/html/Fabu/JzJob_frm.html
@@ -66,10 +66,10 @@
             </div>
           </li>
           <li class="aui-list-item">
-            <div class="aui-list-item-inner" onclick="fnBmap()" style="-webkit-justify-content:initial !important;justify-content:initial !important;padding-right:0 !important">
+            <div class="aui-list-item-inner" onclick="fnBmap()" style="justify-content:initial !important;-webkit-justify-content:initial !important;padding-right:0 !important;">
                 <div class="aui-list-item-title">工作地点</div>
-                <div class="aui-list-item-left">
-                      <input type="" placeholder="请选择" readonly id="info" style="padding-left:35px; width:100%">
+                <div class="aui-list-item-left" style="padding-left:35px;width:80%">
+                      <input type="" placeholder="请选择" readonly id="info">
                 </div>
             </div>
           </li>
@@ -89,36 +89,16 @@
 </body>
 <script type="text/javascript" src="../../script/api.js" ></script>
 <script type="text/javascript">
-var lat,
+var map,
+    lat,
     lon,
     address;
     apiready = function(){
         api.parseTapmode();
-        var map = api.require('bMap');
-        map.getLocation({
-            accuracy: '100m',
-            autoStop: true,
-            filter: 1
-        }, function(ret, err){
-            api.hideProgress();
-            if(ret.status){
-                lat = ret.lat;
-                lon = ret.lon;
-                //设置地图中心
-                map.setCenter({
-                    coords: {
-                        lon: lon,
-                        lat: lat
-                    },
-                    animation:true
-                });
-                getNameFromCoords();
-            }
-
-        });
     }
     // 打开地图
     function fnBmap() {
+      map = api.require('bMap');
       var Button = ['使用当前位置', '打开地图'];
       api.actionSheet({
       title: '请选择',
@@ -128,14 +108,39 @@ var lat,
       var index = ret.buttonIndex;
       if(index ==1){
       if(api.systemType == 'ios'){
-                  api.getLocation(function(ret, err) {
-              if (ret && ret.status) {
-                  //获取位置信息成功
-              } else {
-              }
+        api.getLocation(function(ret, err) {
+        if (ret && ret.status) {
+          map.initMapSDK(function(ret,err) {
+
+        if (ret.status) {
+            alert('地图初始化成功，可以从百度地图服务器检索信息了！');
+        }else {
+          {
+            alert(JSON.stringify(err))
+          }
+        }
+    });
+      // map.getNameFromCoords({
+      //     lon: ret.longitude,
+      //     lat: ret.latitude
+      // },function(ret,err){
+      //     if(ret.status){
+      //         address = ret.address;
+      //         console.log(address)
+      //         $api.val($api.byId("info"),address);
+      //         // api.execScript({
+      //         //     frameName:'bmap_info_frm',
+      //         //     script:'setInfo("'+address+'")'
+      //         // })
+      //     }else {
+      //         console.log(JSON.stringify(err));
+      //     }
+      // });
+    } else {
+        alert(JSON.stringify(err));
+    }
           });
       }else{
-        var map = api.require('bMap');
         map.getLocation({
             accuracy: '100m',
             autoStop: true,
@@ -158,7 +163,7 @@ var lat,
 
         });
       }
-    }else if(index ==2){
+    }else if (index==2) {
       api.openWin({
           name: 'bmap_win',
           url: '../Map/bmap_win.html',
@@ -171,14 +176,12 @@ var lat,
     });
     }
     function getNameFromCoords(){
-      var map = api.require('bMap');
         map.getNameFromCoords({
             lon: lon,
             lat: lat
         },function(ret,err){
             if(ret.status){
                 address = ret.address;
-                console.log(JSON.stringify(ret));
                 $api.val($api.byId("info"),address);
                 // api.execScript({
                 //     frameName:'bmap_info_frm',
