--- a/html/Map/bmap_win.html
+++ b/html/Map/bmap_win.html
@@ -24,7 +24,9 @@
     apiready = function(){
         api.parseTapmode();
         var header = $api.byId('aui-header');
+        $api.fixStatusBar(header);
         var headerPos = $api.offset(header);
+        var body_h = $api.offset($api.dom('body')).h;
         api.openFrame({
             name: 'bmap_frm',
             url: 'bmap_frm.html',
@@ -39,7 +41,7 @@
     };
     function closeWin(){
         api.closeWin();
+
     }
-    
 </script>
 </html>
